<resources>
    <string name="app_name">Chương trình đổi tiền</string>
    <string name="author">Điền họ và tên của bạn</string>
    <string name="computer">Điền tên máy đang dùng</string>
    <string name="textbox_hint">Nhập số tiền</string>

    // Ex1
    <string name="usd_name">American Dollar</string>
    <string name="eur_name">European Cash</string>
    <string name="gbp_name">Greate Britain</string>
    <string name="aud_name">Australia Dollar</string>
    <string name="cad_name">Canadian Dollar</string>
    <string name="zar_name">South Africa Rand</string>
    <string name="nzd_name">New Zealand Dollar</string>
    <string name="vnd_name">Việt Nam Đồng</string>
    <string name="inr_name">Indian Rupe</string>
    <string name="jpy_name">Yên Nhật</string>

    <string name="usd_unit">USD</string>
    <string name="eur_unit">EUR</string>
    <string name="gbp_unit">GBP</string>
    <string name="inr_unit">INR</string>
    <string name="aud_unit">AUD</string>
    <string name="cad_unit">CAD</string>
    <string name="zar_unit">ZAR</string>
    <string name="nzd_unit">NZD</string>
    <string name="jpy_unit">JPY</string>
    <string name="vnd_unit">VNĐ</string>
    
    // Ex2
    <string name="tv_HaiLy">Hải lý</string>
    <string name="tv_Dam">Dặm</string>
    <string name="tv_Km">Kilometer</string>
    <string name="tv_Ly">Lý</string>
    <string name="tv_Met">Met</string>
    <string name="tv_Yard">Yard</string>
    <string name="tv_Foot">Foot</string>
    <string name="tv_Inches">Inches</string>
</resources>